Add GoToHomePage servlet

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
@@ -9,10 +9,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th>Destination</th>
-				<th>Date</th>
-				<th>Details</th>
-				<th>Delete</th>
+				<th>Produtc</th>
 			</tr>
 		</thead>
 		<tbody>
