--- a/GamifiedMarketingApplicationWEB/WebContent/index.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/index.html
@@ -2,13 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Test</title>
+<title>Login page</title>
 </head>
 <body>
+	<h1>Title of the page</h1>
 
-		<form action="#" th:action="@{/TestServlet}" method="GET">
-				<input type="submit">
-		</form>
-		
+	<form action="CheckLogin" method="POST">
+		Username: <input type="text" name="username" required> <br>
+		Password: <input type="password" name="pwd" required><br>
+		<input type="submit" value="login">
+		<p th:text=" ${errorMsg}"></p>
+	</form>
+
 </body>
 </html>
