Fix to login process

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
@@ -13,7 +13,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="a : ${allproducts}">
+			<tr th:each="a : ${product}">
 				<td th:text="${a.id}"></td>
 				<td th:text="${a.name}"></td>
 				<td th:text="${a.price}"></td>
