--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
@@ -2,24 +2,57 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Test</title>
+<title>Home</title>
+<link rel="stylesheet" type="text/css" media="all"
+	href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 </head>
 <body>
-
-	<table>
+	<div align="right">
+		<a th:href="@{/Leaderboard}">Leaderboard</a>
+	</div>
+	<div align="right">
+		<a th:href="@{/Logout}">Logout</a>
+	</div>
+	<h1 th:if="${product != null}">Product of the day</h1>
+	<table th:if="${product != null}">
 		<thead>
 			<tr>
-				<th>Produtc</th>
+				<th>Product Name</th>
+				<th>Product Description</th>
+				<th>Product Price</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="a : ${product}">
-				<td th:text="${a.id}"></td>
-				<td th:text="${a.name}"></td>
-				<td th:text="${a.price}"></td>
-				<td th:text="${a.description}"></td>
+			<tr>
+				<th th:text= "${product.name}"></th>
+				<th th:text= "${product.description}"></th>
+				<th th:text= "${product.price}"></th>
 			</tr>
 		</tbody>
 	</table>
+	<div th:if="${product == null}">
+		<h2>We are sorry</h2>
+		<p>Unfortunately there isn't any highlighted product today. Try log-in tomorrow</p>
+	</div>
+
+
+	<h2 th:if="${reviews != null}" th:text="${'Reviews for ' + product.name}"></h2>
+	<div th:if="${reviews != null}" >
+		<div th:each= "a : ${reviews}">
+			<div class="row">
+				<span th:text= "${'From '}"></span>
+				<b th:text= "${a.authorname +';'}"></b>
+				<span th:text="${'rating: ' + a.rating + ' stars.'}"></span>
+			</div>		
+			<div class="row">
+				<i th:text="${a.reviewtext}"></i>
+			</div>
+		</div>
+	</div>
+	<h2 th:if="${reviews == null and product != null}">This product doesn't have any review.</h2>
+
+	<div th:if="${product != null}">
+		<a th:href="@{/Questionnaire}">Answer to the questionnaire.</a>
+	</div>
 </body>
 </html>
