--- a/GamifiedMarketingApplicationWEB/WebContent/index.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/index.html
@@ -5,7 +5,8 @@
 <title>Login page</title>
 </head>
 <body>
-	<h1>Title of the page</h1>
+	<h1>Welcome!</h1>
+	<p>Insert your username and your password to continue:</p>
 
 	<form action="CheckLogin" method="POST">
 		Username: <input type="text" name="username" required> <br>
