--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Home.html
@@ -52,7 +52,7 @@
 	<h2 th:if="${reviews == null and product != null}">This product doesn't have any review.</h2>
 
 	<div th:if="${product != null}">
-		<a th:href="@{/Questionnaire}">Answer to the questionnaire.</a>
+		<a th:href="@{/AnswerQuestionnaire}">Answer to the questionnaire.</a>
 	</div>
 </body>
 </html>
