--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/DeletePage.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/DeletePage.html
@@ -27,7 +27,7 @@
 					<tbody>
 						<tr th:each="q : ${questionnaires}">
 							<td th:text="${q.product.getName()}"></td>
-							<td th:text="${q.date}"></td>
+							<td th:text="${#dates.format(q.date, 'dd-MMM-yyyy')}"></td>
 							<td><a th:href="@{/DeleteQuestionnaire(questionnaireid=${q.id})}">Delete</a></td>
 						</tr>
 					</tbody>
