--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/PastResults.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/PastResults.html
@@ -8,26 +8,28 @@
 </head>
 <body>
 	<div align="right">
-		<a th:href="@{/AdminPage}">Go back to the admin page</a>
+		<a id="Links"  th:href="@{/AdminPage}">Go back to the admin page</a>
 	</div>	
 	<div align="right">
-		<a th:href="@{/Logout}">Logout</a>
+		<a id="Links"  th:href="@{/Logout}">Logout</a>
 	</div>
-	<table>
-		<thead>
-			<tr>
-				<th>Product</th>
-				<th>Date</th>
-				<th>Details</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="q : ${questionnaires}">
-				<td th:text="${q.product.getName()}"></td>
-				<td th:text="${#dates.format(q.date, 'dd-MMM-yyyy')}"></td>
-				<td><a th:href="@{/UsersResults(questionnaireid=${q.id})}">See all the answers</a></td>
-			</tr>
-		</tbody>
-	</table>
+	<div align="center">
+		<table class="styled-table">
+			<thead>
+				<tr>
+					<th>Product</th>
+					<th>Date</th>
+					<th>Details</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="q : ${questionnaires}">
+					<td th:text="${q.product.getName()}"></td>
+					<td th:text="${#dates.format(q.date, 'dd-MMM-yyyy')}"></td>
+					<td><a th:href="@{/UsersResults(questionnaireid=${q.id})}">See all the answers</a></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </body>
 </html>
