fixed the wrong html loading

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Statistical.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Statistical.html
@@ -23,7 +23,7 @@
 		<a th:href="@{/GoToHomePage}">Go to the homepage and cancel the questionnaire</a>
 	</div>	
 	
-	<form action="#" th:action="@{/Statistic}" method="POST">
+	<form action="#" th:action="@{/Statistical}" method="POST">
 				<p>
 					<label for="age_choice">Insert your age</label> 
 					<select name="age_answer" id="age_answer">
