Post of statistical answers done (greetings redirect no)

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Greetings.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Greetings.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+<meta charset="ISO-8859-1">
+<title>Album Management Home</title>
+<link rel="stylesheet" type="text/css" media="all"
+	href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 </head>
 <body>
-Greetings for having completed the questionnaire
+
+	<h2>Greetings!</h2>
+
 </body>
-</html>
