typo in greetings html

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Greetings.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Greetings.html
@@ -19,6 +19,6 @@
 	<br>
 	<br>
 	<p th:text="${'Greetings ' + session.account.username}"></p>
-	<p> You're helping us in our marketing decisions and you're getting useful points for your purchasing purposed</p>
+	<p> You're helping us in our marketing decisions and you're getting useful points for your purchasing purposes</p>
 	
 </body>
