added link to homepage in leaderboard page

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Leaderboard.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Leaderboard.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <div id="Links" align="right">
+		<a th:href="@{/Home}">Homepage</a>
+	</div>
 	<div align="right">
 		<a id="Links"  th:href="@{/Logout}">Logout</a>
 	</div>
