fixed typo in greetings.html

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Greetings.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Greetings.html
@@ -21,7 +21,7 @@
 		<br>
 		<br>
 		<div id="greeting">
-			<p th:text="${'Confìgratulations ' + session.account.username + ', you just earned ' + newPoints + ' points.'}"></p>
+			<p th:text="${'Congratulations ' + session.account.username + ', you just earned ' + newPoints + ' points.'}"></p>
 			<p>Come back tomorrow for a new questionnaire!</p>
 		</div>
 	</div>
