Change "admin page" to "Admin Page"

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/PastResults.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/PastResults.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div align="right">
-		<a id="Links"  th:href="@{/AdminPage}">Go back to the admin page</a>
+		<a id="Links"  th:href="@{/AdminPage}">Go back to the Admin Page</a>
 	</div>	
 	<div align="right">
 		<a id="Links"  th:href="@{/Logout}">Logout</a>
