Fix link placement

--- a/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Leaderboard.html
+++ b/GamifiedMarketingApplicationWEB/WebContent/WEB-INF/Leaderboard.html
@@ -32,8 +32,8 @@ table, th {
 		</div>	
 	</div>
 	<div th:unless="${status.name() == 'USER'}">
-		<div id="Links" align="right">Go back to Admin Page
-		<a th:href="@{/AdminPage}">Homepage</a>
+		<div id="Links" align="right">
+		<a th:href="@{/AdminPage}">Go back to Admin Page</a>
 		</div>
 	</div>
 	
